# OZConding_FastAPI_meetifyr

./: .gitignore  README.md
.github/workflows/: ci.yml
01_DAY1/: .gitignore
01_DAY1/FastAPI인강&과제/first/: pyproject.toml  run.py
01_DAY1/FastAPI인강&과제/first/schemas/: users.py
meetifyr/: argi.py  conftest.py  pyproject.toml  test.sh
meetifyr/meetifyr/: __init__.py
meetifyr/meetifyr/apis/v1/: meeting_router.py  participant_router.py
meetifyr/meetifyr/configs/: __init__.py  base_config.py  tortoise_config.py
meetifyr/meetifyr/dtos/: create_meeting_response.py  create_participant_request.py  create_participant_response.py  frozen_config.py  get_meeting_response.py  update_meeting_request.py
meetifyr/meetifyr/services/: meeting_service_mysql.py  participant_service_mysql.py
meetifyr/meetifyr/tortoise_models/: base_model.py  meeting.py  participant.py  participant_date.py
meetifyr/meetifyr/utils/: base62.py
meetifyr/migrations/models/: 0_20260109015110_init.py  1_20260109175635_update.py  2_20260117164424_update.py
meetifyr/tests/apis/v1/: test_meeting_router_mysql.py  test_participant_router_mysql.py
