[tool.poetry]
name = "meetifyr"
version = "0.1.0"
description = ""
authors = ["jun2k5 <jun2k5@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dec.dependencies]
fastapi = {extras = ["standard"], version = "^0.128.0"}


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.40.0"
orjson = "^3.11.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
omit = ["*/test_*.py"]

[tool.black]
line-length = 120

[tool.ruff]
target-version="py314"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true