[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["jun2k5 <jun2k5@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"
mypy = "1.13.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"


[tool.poetry.group.dec.dependencies]
fastapi = {extras = ["standard"], version = "^0.128.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
target-version="py314"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true